--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,26 +4,62 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
 </head>
+
 <body>
+  <div>
   <container>
-    <form>
+
+    <h3>Register</h3>
+    <form action="/register" method="post">
       <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">username</label>
-        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+        <input name="username" type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        <div id="emailHelp" class="form-text">We'll never share your details with anyone else.</div>
       </div>
+
       <div class="mb-3">
         <label for="exampleInputPassword1" class="form-label">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1">
+        <input name="password" type="password" class="form-control" id="exampleInputPassword1">
       </div>
-      <div class="mb-3 form-check">
-        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-        <label class="form-check-label" for="exampleCheck1">Check me out</label>
+
+      <div class="mb-3">
+        <label for="exampleInputEmail1" class="form-label">Secret</label>
+        <input name="secret" type="text" class="form-control" id="exampleInputEmail1">
       </div>
+    
+      
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
   </container>
+<hr>
+  <div>
+    <container>
+  
+      <h3>Login</h3>
+      <form action="/login" method="post">
+        <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label">username</label>
+          <input name="username" type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          <div id="emailHelp" class="form-text">We'll never share your details with anyone else.</div>
+        </div>
+  
+        <div class="mb-3">
+          <label for="exampleInputPassword1" class="form-label">Password</label>
+          <input name="password" type="password" class="form-control" id="exampleInputPassword1">
+        </div>
+  
+        <div class="mb-3">
+         
+      
+        
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+    </container>
+  </div>
+</div>
 
 </body>
 </html>
